Fix Registry and misc issues